@@ -392,7 +392,8 @@ JSValueRef JSObjectCallAsFunction(JSContextRef ctx, JSObjectRef object, JSObject
     exec->globalData().heap.registerThread();
     JSLock lock(exec);
 
-    exec->globalData().clientData->willExecute(exec);
+    if (JSGlobalData::ClientData* clientData = exec->globalData().clientData)
+        clientData->willExecute(exec);
 
     JSObject* jsObject = toJS(object);
     JSObject* jsThisObject = toJS(thisObject);
@@ -418,7 +419,8 @@ JSValueRef JSObjectCallAsFunction(JSContextRef ctx, JSObjectRef object, JSObject
         }
     }
 
-    exec->globalData().clientData->didExecute(exec);
+    if (JSGlobalData::ClientData* clientData = exec->globalData().clientData)
+        clientData->didExecute(exec);
     return result;
 }
 
