@@ -1,3 +1,12 @@
+2009-11-23  Mark Rowe  <mrowe@apple.com>
+
+        Unreviewed. Unbreak the regression tests after r51329.
+
+        * API/JSBase.cpp:
+        (JSEvaluateScript): Null-check clientData before dereferencing it.
+        * API/JSObjectRef.cpp:
+        (JSObjectCallAsFunction): Ditto.
+
 2009-11-23  Gavin Barraclough  <barraclough@apple.com>
 
         Reviewed by Geoff Garen.
